--- a/BlockBuster/src/main/resources/application.properties
+++ b/BlockBuster/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
+jwt.secret=Chiavesegreta123
+jwt.expirationms=86400000000
